Minor legal change

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; base-uri 'none'; connect-src 'none'; font-src 'none'; form-action 'none'; frame-src 'none'; img-src 'self' data:; manifest-src 'self'; media-src 'none'; object-src 'none'; script-src 'self'; style-src 'self' 'sha256-Ply0TPX/7tBYYftdniiKDO8wB+2bzTqFglgbWvAM9q8='; upgrade-insecure-requests; worker-src 'none'">
 
     <meta name="description" content="emoji-aes: Encrypt messages with emojis.">
-    <meta name="author" content="Aaron Horler">
 
     <!-- Privacy -->
     <meta name="referrer" content="no-referrer">
@@ -153,7 +152,7 @@
         </div>
         <div id="decrypt" class="col-lg-12 text-center">
           <hr>
-          <p class="info">Developed by Aaron Horler in 2017. <a href="https://github.com/aghorler/emoji-aes">Source</a>.</p>
+          <p class="info">Developed in 2017. <a href="https://github.com/aghorler/emoji-aes">Source</a>.</p>
         </div>
       </div>
     </div>
